...
                  children: [
                    const SizedBox(
                      height: 72,
                    ),
                    const Text(
                      "Buildings Admin",
                      key: Key("buildingListHeader"),
                      style: TextStyle(
                        color: Colors.white,
                        fontWeight: FontWeight.w700,
                        fontSize: 36,
                      ),
                    ),
...
                            ),
                          );
                        } else if (state is AllBldgLoadedState) {
                          final allFetchedBldgs = state.fetchedbldgs;
                          return Flexible(
                            child: ListView.builder(
                                key: const Key("bldgListView"),
                                itemCount: allFetchedBldgs.length,
                                itemBuilder: (context, index) {
                                  final currBldg = allFetchedBldgs[index];
                                  return BuildingRow(
                                    key: Key('Bldg$index'),
                                    building: currBldg,
...
