...
                                    const EdgeInsets.symmetric(horizontal: 20),
                                decoration: BoxDecoration(
                                  color: const Color(0x1AC4C4C4),
                                  borderRadius: BorderRadius.circular(8),
                                ),
                                child: TextFormField(
                                    key: const Key('categoryNameField'),
                                    initialValue: '',
                                    style: const TextStyle(color: Colors.white),
                                    validator: (value) {
                                      if (value!.isEmpty) {
                                        return 'Category name is required';
                                      }
...
                            ]),
                      ),
                      const SizedBox(height: 20),
                      Align(
                        alignment: Alignment.centerLeft,
                        child: ElevatedButton(
                          key: const Key('addCategorySubmitButton'),
                          style: ElevatedButton.styleFrom(
                            primary: const Color(0xFFF9C35C),
                            // fixedSize: Size(243, 41),
                            fixedSize: const Size(200, 34),
                          ),
                          onPressed: () {
...
